src/components/ImageQueue/ImageQueue.css
@import '../variables.css';

.root {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  height: 100%;
  padding: 1rem;
  box-sizing: border-box;
  background-color: #f1f3f6;
  position: relative;
}

.hero {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;

  width: 100%;
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50% 50%;

  margin-bottom: 1rem;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
}

.options {
  width: 100%;
  position: absolute;
  top: 2rem;
  left: 2rem;
}

.buttons {
  & span {
    cursor: pointer;
    display: inline-block;
    border-radius: 50%;
    border: 1px solid transparent;
    background: #aaa;
    opacity: 0.7;
    padding: 10px;

    transition: 0.2s;
  }

  & span:hover {
    border: 1px solid transparent;
    background: rgba(0, 0, 0, 0.12);
    opacity: 1;
  }

  & span svg {
    display: block;
    margin: auto;
    fill: black !important;
  }
}

.taggingButton {
  position: absolute;
  right: 2rem;
  top: 2rem;
}

.image {
  position: relative;
  max-height: 400px;

  & img {
	  max-height: 400px;
  }
}

.dock {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
  padding: 0.25rem;
  width: 100%;
  min-height: 174px;
  box-sizing: border-box;
}

.gridList {
  
  display: flex;
  overflow-x: auto;
  flex-wrap: nowrap !important;

  & > div {
    width: 250px !important;
    flex-shrink: 0;
  }
}

.titleStyle {
  color: rgb(0, 188, 212);
}

